gcc/testsuite/g++.dg/parse/ctor4.C
// PR c++/27279
// { dg-do compile }

struct A
{
  A(void,void);  // { dg-error "incomplete type|invalid use" }
};
